packages/coffee.chealt.com/src/components/coffees/item.css
.list .coffee-details {
  width: 100%;
}

.coffee-details {
  .price-per-gram {
    font-size: 1rem;
    text-transform: none;
  }
}

.decaf-tag {
  position: absolute;
  width: 100%;
  top: 24px;
  right: -50%;
  text-align: center;
  transform: rotate(45deg);
  background-color: var(--color-background--alternative);
  padding: var(--gap--s) 40px;
  text-transform: uppercase;
}

.chip + span {
  margin-right: var(--gap--s);
}

dd:has(.chip + .chip) {
  display: flex;
  align-items: center;
}

